<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/BottomMenuFragment">
    <fragment
        android:id="@+id/BottomMenuFragment"
        android:name="ru.lorderi.androktor.ui.fragment.BottomMenuFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_bottom_menu">
        <action
            android:id="@+id/action_bottomFragment_to_companyDetailFragment"
            app:destination="@id/companyDetailFragment" />
        <action
            android:id="@+id/action_bottomFragment_to_vacancyDetailFragment"
            app:destination="@id/vacancyDetailFragment" />
        <action
            android:id="@+id/action_BottomMenuFragment_to_myResumeFragment"
            app:destination="@id/myResumeFragment" />
    </fragment>
    <fragment
        android:id="@+id/companyDetailFragment"
        android:name="ru.lorderi.androktor.ui.fragment.CompanyDetailFragment"
        android:label="@string/company_details_label"
        tools:layout="@layout/fragment_company_detail">
        <action
            android:id="@+id/action_companyDetailFragment_to_vacancyDetailFragment"
            app:destination="@id/vacancyDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/vacancyDetailFragment"
        android:name="ru.lorderi.androktor.ui.fragment.VacancyDetailFragment"
        android:label="@string/vacancy_details_label"
        tools:layout="@layout/fragment_vacancy_detail">
        <action
            android:id="@+id/action_vacancyDetailFragment_to_companyDetailFragment"
            app:destination="@id/companyDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/myResumeFragment"
        android:name="ru.lorderi.androktor.ui.fragment.MyResumeFragment"
        android:label="@string/my_resume_label"
        tools:layout="@layout/fragment_my_resume" />
</navigation>
