<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.fragment.VacancyDetailFragment">

    <TextView
        android:id="@+id/profession"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/top_company_barrier"
        app:layout_constraintEnd_toStartOf="@id/favorite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="QA" />

    <ImageView
        android:id="@+id/favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/top_company_barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/profession"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_bookmark_24"
        tools:text="QA"
        android:contentDescription="@string/favorite" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/top_company_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="avatar, company" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/avatar_label"
        app:layout_constraintBottom_toBottomOf="@id/company"
        app:layout_constraintEnd_toStartOf="@id/company"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/company"
        app:srcCompat="@drawable/avatar_background" />

    <TextView
        android:id="@+id/avatar_initials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/design_default_color_on_primary"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toEndOf="@+id/avatar"
        app:layout_constraintStart_toStartOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        tools:text="O" />

    <TextView
        android:id="@+id/company"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="?colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/salary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/profession"
        tools:text="OOO SuperPay" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/bottom_company_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar, company" />

    <TextView
        android:id="@+id/salary_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salary_label"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/level"
        app:layout_constraintEnd_toStartOf="@id/salary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_company_barrier" />


    <TextView
        android:id="@+id/salary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@id/level"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/salary_label"
        app:layout_constraintTop_toBottomOf="@id/bottom_company_barrier"
        tools:text="80000" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/salary_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="salary_label, salary" />

    <TextView
        android:id="@+id/level_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/level_label"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/level"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/salary_barrier" />

    <TextView
        android:id="@+id/level"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/level_label"
        app:layout_constraintTop_toBottomOf="@id/salary"
        tools:text="middle" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/level_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="level, level_label" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/description_label"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/level_barrier" />


    <TextView
        android:id="@+id/detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description"
        tools:text="Good vacancy" />

</androidx.constraintlayout.widget.ConstraintLayout>
